--- a/src/config/view.html
+++ b/src/config/view.html
@@ -2,7 +2,7 @@
  * @Author: Night-stars-1 nujj1042633805@gmail.com
  * @Date: 2023-08-12 20:16:45
  * @LastEditors: Night-stars-1 nujj1042633805@gmail.com
- * @LastEditTime: 2024-02-02 20:33:34
+ * @LastEditTime: 2024-02-12 16:17:57
  * @Description: 
  * 
  * Copyright (c) 2023 by Night-stars-1, All Rights Reserved. 
@@ -284,6 +284,29 @@
             <span class="q-switch__handle"></span>
         </div>
     </div>
+    <hr class="horizontal-dividing-line">
+    <div class="vertical-list-item" @click="message_merging = !message_merging">
+        <div>
+            <h2>消息合并</h2>
+            <span class="secondary-text">消息合并(重启生效)</span>
+        </div>
+        <div class="switchBackgroundImage q-switch" :class="{ 'is-active': message_merging }">
+            <span class="q-switch__handle"></span>
+        </div>
+    </div>
+    <Transition duration="500" name="nested">
+        <div v-if="false">
+            <div class="vertical-list-item" @click="message_avatar_float = !message_avatar_float">
+                <div>
+                    <h2>头像浮动</h2>
+                    <span class="secondary-text">头像浮动</span>
+                </div>
+                <div class="switchBackgroundImage q-switch" :class="{ 'is-active': message_avatar_float }">
+                    <span class="q-switch__handle"></span>
+                </div>
+            </div>
+        </div>
+    </Transition>
 </div>
 
 <div class="wrap" id="sidebar">
